--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hello World !</h1>
     <p>This is the first change.</p>
     <p>This is the second change.</p>
+    <p>This is the third and final change.</p>
 </body>
 </html>
